Updated the insert method in the octree to adapt with the maximum entries in the node as well as update and search methods. Also, added the SerializablePageRecord to the octree.